--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,8 +1,8 @@
-appId: 'modrealmslauncher'
-productName: 'ModRealms Launcher'
+appId: 'inkubatelauncher'
+productName: 'Inkubate Launcher'
 artifactName: '${productName}-setup-${version}.${ext}'
 
-copyright: 'Copyright © 2021 ModRealms'
+copyright: 'Copyright © 2021 Inkubate'
 
 asar: true
 compression: 'maximum'
@@ -39,10 +39,10 @@ mac:
 # Linux Configuration
 linux: 
   target: 'AppImage'
-  maintainer: 'Ally'
-  vendor: 'ModRealms Network'
-  synopsis: 'Modded Minecraft Launcher'
-  description: 'Custom launcher which allows users to join ModRealms. All mods, configurations, and updates are handled automatically.'
+  maintainer: 'Juloass'
+  vendor: 'Vytalic'
+  synopsis: 'Inkubate MineCraft Launcher'
+  description: 'Custom launcher which allows users to join Inkubated Servers. All mods, configurations, and updates are handled automatically.'
   category: 'Game'
 
 
